--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -43,7 +43,7 @@ libraries {
     path /vendor/lib/soundfx/libqcomvoiceprocessing.so
   }
   dirac {
-    path /vendor/lib/soundfx/libdirac.so
+	path /vendor/lib/soundfx/libdirac.so
   }
 }
 
@@ -228,10 +228,15 @@ effects {
     library audio_pre_processing
     uuid 1d97bb0b-9e2f-4403-9ae3-58c2554306f8
   }
-  dirac {
-    library dirac
-    uuid e069d9e0-8329-11df-9168-0002a5d5c51b
-  }
+        dirac_controller {
+		library dirac
+			uuid b437f4de-da28-449b-9673-667f8b9643fe
+	}
+	dirac_music {
+		library dirac
+			uuid b437f4de-da28-449b-9673-667f8b964304
+	}
+
 }
 
 # Audio global processor configurations.
